Mon Aug 16 13:55:10 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(expandVariables): fix up test for &amp;

Mon Aug 16 12:08:57 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* Makefine.am, Makefile.in, installdir/Makefile.am,
	installdir/Makefile.in: change all remaining INSTALL_ROOT to DESTDIR.

Fri Aug 13 15:44:31 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse): added missing ')' in new code.  Oops!

	* htlib/strptime.c, htlib/mktime.c: added #include "htconfig.h"
	to pick up definitions from configure program. Let's try to
	remember that config.h != htconfig.h!

Fri Aug 13 14:00:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parse), htcommon/defaults.cc, htdoc/attrs.html
	(pdf_parser): Removed -pairs option from default arguments, added
	special test for acroread to decide whether to use output file or
	directory as last argument (also adds -toPostScript if missing).
	Program now tries to test for existance of parser before trying
	to call it.

Fri Aug 13 10:10:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html(pdf_parser): updated xpdf version number.

Thu Aug 12 17:09:37 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* contrib/parse_doc.pl: updated for xpdf 0.90, plus other fixes.

Thu Aug 12 11:12:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdoc/attrs.html(logging): added Geoff's description of log lines.

Thu Aug 12 11:21:12 1999  Loic Dachary  <loic@ceic.com>

	* strptime fixes : AC_FUNC_STRPTIME defined in acinclude.m4 and used in configure.in,
	  conditional compilation of strptime.c (only if HAVE_STRPTIME not defined),
	  removed Htstrptime (strptime.c now defines strptime), changed all calls to Htstrptime
	  to calls to strptime.

Wed Aug 11 16:59:41 1999  Loic Dachary  <loic@ceic.com>

	* */Makefile.am: use -release instead of -version-info because nobody